# html2md-confluence

./: .pre-commit-config.yaml  .sourceheaders.toml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: dummy.rs  emoticon.rs  image.rs  lib.rs  link.rs  main.rs  util.rs
src/macros/: expand.rs  info.rs  jira.rs  mod.rs  status.rs
